service section and all page hero section

--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
 </head>
 
 <body>
-  <section class="d-none d-sm-block header-top">
+  <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2 justify-content-end">
-        <div>
-          <a href="" class="text-white nav-link py-1 mr-3">
+      <div class="d-flex gap-2 justify-content-end topbar-wrap">
+        <div class="topbar-items">
+          <a href="" class="text-white nav-link py-1 mr-0 mr-sm-3">
             <span>
-              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i>
             </span>
+            <span class="d-none d-sm-inline">+01 123455678990</span>
           </a>
         </div>
-        <div>
-          <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
+        <div class="topbar-items">
+          <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-sm-3">
             <span>
-              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i>
             </span>
+            <span class="d-none d-sm-inline">support@hostflu.net</span>
           </a>
         </div>
       </div>
@@ -369,7 +371,7 @@
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             <!-- price list 1 -->
             <div class="row gy-5">
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -399,7 +401,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.4s">
                 <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
@@ -429,7 +431,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.6s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -464,7 +466,7 @@
           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <!-- price list2 -->
             <div class="row gy-5">
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -494,7 +496,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.4s">
                 <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
@@ -524,7 +526,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.6s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -622,16 +624,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Expert Management
+                  Fast and Realiable Server
                 </h5>
                 <p class="text-justify">
-                  Incidunt odit rerum tenetur alias architecto asperiores omnis cumque doloribus aperiam numquam!
-                  Eligendi
-                  corrupti, molestias laborum dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
-                  officia
-                  id, aspernatur nihil.
-                  Tempore laborum nesciunt ut veniam, nemo officia ullam repudiandae repellat veritatis unde reiciendis
-                  possimus animi autem natus
+                  HostFlu guarantees the top of server overall performance, making sure unmatched speed and reliability
+                  on your virtual ventures. With our steadfast dedication to uptime and modern infrastructure, believe
+                  HostFlu to be your superior desire for a seamless online experience.
                 </p>
               </div>
             </div>
@@ -643,16 +641,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Secure Investment
+                  Free SSL
                 </h5>
                 <p class="text-justify">
-                  Incidunt odit rerum tenetur alias architecto asperiores omnis cumque doloribus aperiam numquam!
-                  Eligendi
-                  corrupti, molestias laborum dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
-                  officia
-                  id, aspernatur nihil.
-                  Tempore laborum nesciunt ut veniam, nemo officia ullam repudiandae repellat veritatis unde reiciendis
-                  possimus animi autem natus
+                  HostFlu sets the standard for excellence in website security, providing top-tier SSL certificates at
+                  no extra cost. With our commitment to safeguarding your online presence, trust HostFlu to deliver the
+                  best-in-class SSL protection, ensuring your visitors' trust and confidence.
                 </p>
               </div>
             </div>
@@ -664,16 +658,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Instant Trading
+                  Backup
                 </h5>
                 <p class="text-justify">
-                  Incidunt odit rerum tenetur alias architecto asperiores omnis cumque doloribus aperiam numquam!
-                  Eligendi
-                  corrupti, molestias laborum dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
-                  officia
-                  id, aspernatur nihil.
-                  Tempore laborum nesciunt ut veniam, nemo officia ullam repudiandae repellat veritatis unde reiciendis
-                  possimus animi autem natus
+                  HostFlu stands out as the premier choice for backup solutions, offering Powerful data protection and
+                  seamless recovery options. With our industry-leading expertise and reliable services, trust HostFlu to
+                  safeguard your digital assets with unparalleled reliability and efficiency.
                 </p>
               </div>
             </div>
@@ -686,16 +676,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Happy Customers
+                  LiteSpeed Cache
                 </h5>
                 <p class="text-justify">
-                  Incidunt odit rerum tenetur alias architecto asperiores omnis cumque doloribus aperiam numquam!
-                  Eligendi
-                  corrupti, molestias laborum dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
-                  officia
-                  id, aspernatur nihil.
-                  Tempore laborum nesciunt ut veniam, nemo officia ullam repudiandae repellat veritatis unde reiciendis
-                  possimus animi autem natus
+                  HostFlu leads the percent with LiteSpeed Cache, making sure lightning-fast internet site loading times
+                  and exceptional overall performance. With our current era and optimized caching solutions, trust
+                  HostFlu to supply the closing in speed and efficiency in your on-line presence.
                 </p>
               </div>
             </div>
@@ -712,7 +698,6 @@
 
   <!-- end why section -->
 
-
   <div class="container-xxl py-5">
     <div class="container">
       <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s"
@@ -722,7 +707,7 @@
           ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
       </div>
       <div class="row g-4">
-        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="col-lg-3 col-md-6 mt-3 wow fadeInUp" data-wow-delay="0.1s">
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-1.jpg" alt="">
@@ -736,7 +721,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="col-lg-3 col-md-6 mt-3 wow fadeInUp" data-wow-delay="0.3s">
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-2.jpg" alt="">
@@ -750,7 +735,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+        <div class="col-lg-3 col-md-6 mt-3 wow fadeInUp" data-wow-delay="0.5s">
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-3.jpg" alt="">
@@ -764,7 +749,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+        <div class="col-lg-3 col-md-6 mt-3 wow fadeInUp" data-wow-delay="0.7s">
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-4.jpg" alt="">
