--- a/service.html
+++ b/service.html
@@ -40,21 +40,23 @@
 </head>
 
 <body class="sub_page">
-  <section class="d-none d-sm-block header-top">
+  <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2 justify-content-end">
-        <div>
-          <a href="" class="text-white nav-link py-1 mr-3">
+      <div class="d-flex gap-2 justify-content-end topbar-wrap">
+        <div class="topbar-items">
+          <a href="" class="text-white nav-link py-1 mr-0 mr-sm-3">
             <span>
-              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i>
             </span>
+            <span class="d-none d-sm-inline">+01 123455678990</span>
           </a>
         </div>
-        <div>
-          <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
+        <div class="topbar-items">
+          <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-sm-3">
             <span>
-              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i>
             </span>
+            <span class="d-none d-sm-inline">support@hostflu.net</span>
           </a>
         </div>
       </div>
@@ -120,12 +122,12 @@
     <!-- end header section -->
   </div>
 
-
   <!-- common hero start hero -->
-  <section class="common-hero pricing-hero">
-    <img src="./images/pricing-hero.jpg" alt="" class="img-fluid w-100">
+  <section class="common-hero service-hero text-center">
+    <img src="./images/Service.png" alt="" class="img-fluid mx-auto">
   </section>
   <!-- common  hero end -->
+
 
   <!-- service section -->
   <section class="service_section layout_padding">
@@ -133,7 +135,7 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our <span>Services</span>
+            Our Services<span></span>
           </h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
