pricing icon and page issue

--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
-                    style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-share-alt text-white"></i>
+                    style="width: 45px; height: 45px; margin-top: -3px; color:white">
+                    <i class="fa fa-retweet" aria-hidden="true"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Shared Hosting</h4>
@@ -439,7 +439,7 @@
                     <i class="fa fa-cog text-white"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
-                    <h4 class="font-weight-bold">Dedi Hosting</h4>
+                    <h4 class="font-weight-bold">Dedicated Hosting</h4>
                     <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
                   </div>
                   <div class="text-center border-bottom p-4">
