--- a/pricing.html
+++ b/pricing.html
@@ -152,12 +152,12 @@
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             <!-- price list 1 -->
             <div class="row gy-5">
-              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.2s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
-                    style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-share-alt text-white"></i>
+                    style="width: 45px; height: 45px; margin-top: -3px; color:white">
+                    <i class="fa fa-retweet" aria-hidden="true"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Shared Hosting</h4>
@@ -182,7 +182,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.4s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.4s">
                 <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
@@ -212,7 +212,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.6s">
+              <div class="col-lg-4 col-md-6 mt-3 wow fadeInUp my-3 fadeInUp" data-wow-delay="0.6s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -220,7 +220,7 @@
                     <i class="fa fa-cog text-white"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
-                    <h4 class="font-weight-bold">Dedi Hosting</h4>
+                    <h4 class="font-weight-bold">Dedicated Hosting</h4>
                     <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
                   </div>
                   <div class="text-center border-bottom p-4">
