--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             </ul>
             <div class="quote_btn-container d-flex">
-              <a href="" class="text-white nav-link border">
+              <a href="" class="text-white nav-link border rounded login-menu-btn bg-white">
                 Login
                 <span>
                   <i class="fa fa-sign-in" aria-hidden="true"></i>
@@ -877,7 +877,7 @@
       <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
           <div class="owl-carousel testimonial-carousel">
-            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #b0afaf">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
                 style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
@@ -893,7 +893,7 @@
                 </div>
               </div>
             </div>
-            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #b0afaf">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
                 style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
@@ -909,7 +909,7 @@
                 </div>
               </div>
             </div>
-            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #b0afaf">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
                 style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
@@ -925,7 +925,7 @@
                 </div>
               </div>
             </div>
-            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #b0afaf">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
                 style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
