--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -102,7 +102,7 @@
               </li> -->
                             <li class="nav-item">
                                 <div class="quote_btn-container d-flex">
-                                    <a href="" class="text-white nav-link border">
+                                    <a href="" class="text-white nav-link border rounded login-menu-btn bg-white">
                                         Login
                                         <span>
                                             <i class="fa fa-sign-in" aria-hidden="true"></i>
