--- a/terms&condition.html
+++ b/terms&condition.html
@@ -13,7 +13,7 @@
     <meta name="author" content="" />
     <link rel="shortcut icon" href="images/favicon.png" type="">
 
-    <title> Finexo </title>
+    <title> Hostflu || Terms & Conditions </title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -84,11 +84,11 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item ">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span>
                                 </a>
                             </li>
@@ -126,7 +126,7 @@
 
     <section class="py-5">
         <div class="container">
-            <h6 class="font-weight-bold">Hostflu.net Terms and Conditions</h6>
+            <h4 class="font-weight-bold">Hostflu.net Terms and Conditions</h4>
             <div>
                 Welcome to Hostflu.net! Before you begin participating in our variety of services, together with domain
                 registration, VPS, dedicated servers, and e-mail website hosting, please take a second to study our
@@ -134,20 +134,20 @@
                 subsequent terms and situations. If you do not agree with any of those phrases, please refrain from
                 using our services.
                 <p class="mt-3">
-                <h4>1. Acceptance of Terms</h4>
+                <h5>1. Acceptance of Terms</h5>
                 1. **Information We Collect:**
                 By using the offerings supplied through HostFlu and the Internet, you acknowledge that you have
                 examined, understood, and agreed to these terms and conditions and our Privacy Policy. These phrases
                 represent a legally binding agreement between you and HostFlu.Internet.
                 </p>
                 <p class="mt-3">
-                <h4>2. Services Offered</h4>
+                <h5>2. Services Offered</h5>
                 Hostflu.net offers diverse offerings, including Shared Hosting, Domain Registration, and VPS (Virtual
                 Private Servers). We reserve the right to modify, lower, or discontinue any aspect of our services
                 without prior notice.
                 </p>
                 <p class="mt-3">
-                <h4>3. Account Registration</h4>
+                <h5>3. Account Registration</h5>
                 You may be required to create an account to access certain features of our services. At the registration
                 stage, you must provide accurate, modern, and complete statistics and replace such records as needed.
                 You are entirely accountable for retaining the confidentiality of your account credentials and all
