pricing table and icon updated

--- a/index.html
+++ b/index.html
@@ -355,7 +355,6 @@
             duo
             sed. Sed vero sea diam erat vero elitr sit clita.</p>
         </div>
-
         <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
           <li class="nav-item mr-3" role="presentation">
             <button class="nav-link active border-0" id="pills-home-tab" data-toggle="pill" data-target="#pills-home"
@@ -376,7 +375,8 @@
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px; color:white">
-                    <i class="fa fa-retweet" aria-hidden="true"></i>
+                    <i class="fa fa-share-square-o text-white" aria-hidden="true"></i>
+
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Shared Hosting</h4>
@@ -406,7 +406,7 @@
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-server text-white"></i>
+                    <i class="fa fa-share-square text-white" aria-hidden="true"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">VPS Hosting</h4>
@@ -436,7 +436,7 @@
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-cog text-white"></i>
+                    <i class="fa fa-share-alt-square text-white" aria-hidden="true"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Dedicated Hosting</h4>
@@ -471,7 +471,8 @@
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-share-alt text-white"></i>
+                    <i class="fa fa-microchip text-white" aria-hidden="true"></i>
+
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">VPS Hosting</h4>
@@ -531,7 +532,8 @@
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-cog text-white"></i>
+                    <i class="fa fa-database text-white" aria-hidden="true"></i>
+
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Dedi Hosting</h4>
@@ -637,7 +639,7 @@
           <div class="col-md-6 pl-lg-5">
             <div class="box">
               <div class="img-box">
-                <img src="images/w2.png" alt="">
+                <img src="images/ssl.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
