--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
           voluptatibus
         </p> -->
       </div>
-      <div class="row">
+      <div class="row align-items-start">
         <div class="col-md-6 ">
           <div class="img-box">
             <img src="images/about-img.png" alt="">
