--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-1.jpg" alt="">
-              <h5 class="font-weight-bold mb-1">Full Name</h5>
-              <small>Designation</small>
+              <h5 class="font-weight-bold mb-1">Ashiqur Rahman</h5>
+              <small>Founder</small>
             </div>
             <div class="d-flex justify-content-center bg-primary p-3">
               <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -727,8 +727,8 @@
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-2.jpg" alt="">
-              <h5 class="font-weight-bold mb-1">Full Name</h5>
-              <small>Designation</small>
+              <h5 class="font-weight-bold mb-1">Sumon Chandra Paul</h5>
+              <small>Web Developer</small>
             </div>
             <div class="d-flex justify-content-center bg-primary p-3">
               <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -741,8 +741,8 @@
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-3.jpg" alt="">
-              <h5 class="font-weight-bold mb-1">Full Name</h5>
-              <small>Designation</small>
+              <h5 class="font-weight-bold mb-1">Tanbirul Islam Zihad</h5>
+              <small>Content Writter</small>
             </div>
             <div class="d-flex justify-content-center bg-primary p-3">
               <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -755,7 +755,7 @@
           <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-4.jpg" alt="">
-              <h5 class="font-weight-bold mb-1">Full Name</h5>
+              <h5 class="font-weight-bold mb-1">Umme Salma</h5>
               <small>Designation</small>
             </div>
             <div class="d-flex justify-content-center bg-primary p-3">
